# yt-dl-scli

./: .gitignore  README.md  pyproject.toml
src/: main.py
yt_dl_scli/: main.py
