[tool.poetry]
name = "yt-dl-scli"
version = "1.1b"
description = ""
authors = []
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
yt-dlp = "^2023.11.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yt-dl-scli = "yt-dl-scli.main:run"
