[tool.poetry]
name = "yt_dl_scli"
version = "1.2b"
description = ""
authors = []
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
yt-dlp = "^2023.11.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yt-dl-scli = "yt_dl_scli.main:run"
yds = "yt_dl_scli.main:run"
